# oaz

./: .clang-tidy  .flake8  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  README.rst  TODO.rst  dev-requirements.txt  environment.yml  pyproject.toml  refresh.sh  requirements.txt  setup.py  setup2.py
.github/workflows/: build_and_test.yml  formatting_and_linting.yml  pyoaz_formatting_and_linting.yml  run_tests.yml
cmake/modules/: FindTensorFlow.cmake
data/: data.json  explore.ipynb  generate_bandits_model.py  generate_connect_four_model.py  generate_connect_four_model_for_trainer.py  generate_connect_four_model_keras.py  generate_connect_four_model_resnet.py  generate_connect_four_model_token_counts.py  model.py
data/tic_tac_toe/: boards.npy  dataset.pkl  gt_dataset.pkl
deprecated/: CMakeLists.txt
deprecated/examples/: connect_four_self_play_example.cpp  generate_connect_four_model.py  self_play.sh
deprecated/examples/model/: saved_model.pb
deprecated/experiments/: az_connect_four_new.py  az_model.py  az_model_connect_four.py  az_model_tic_tac_toe.py
deprecated/oaz/az/: self_play_impl.cpp
deprecated/test/az/: az_training_test.cpp
deprecated/test/board/: board_test.cpp
examples/: connect_four_example.cpp  connect_four_nn_example.cpp  generate_connect_four_model.py
examples/model/variables/: variables.data-00000-of-00001
experiments/: az_connect_four_new.py  connect_four.toml  test_script.py  tic_tac_toe.toml  training_script.py
experiments/benchmark/connect_four/: benchmark_boards.npy  benchmark_values.npy
experiments/benchmark/tic_tac_toe/: benchmark_boards.npy  benchmark_values.npy  tic_tac_toe_table.csv
experiments/starting_position_experiment/: run_experiments.sh  starting_position_experiment.toml
experiments/starting_position_experiment/experiment_1/: config.toml
experiments/starting_position_experiment/no_starting_positions/: desc.txt
experiments/tmp/: Untitled.ipynb  board.npy  debug_board.ipynb
include/oaz/games/: board.hpp  (+2 more)
notebooks/: check_weight_transfer.ipynb  quickstart.ipynb
oaz/array/: array.hpp  test  test.cpp
oaz/az/: self_play.hpp  self_play_impl.cpp
oaz/bitboard/: bitboard.hpp  helpers.hpp
oaz/bots/: mcts_bot.cpp  mcts_bot.hpp
oaz/cache/: cache.hpp  simple_cache.hpp  simply_cacheable.hpp
oaz/evaluator/: evaluator.hpp  uniform_policy_evaluator.cpp  uniform_policy_evaluator.hpp
oaz/games/: bandits.cpp  bandits.hpp  bandits_impl.cpp  board.hpp  bomberland.cpp  bomberland.hpp  connect_four.cpp  connect_four.hpp  connect_four_impl.cpp  game.hpp  generic_game_map.hpp  tic_tac_toe.cpp  tic_tac_toe.hpp  tic_tac_toe_impl.cpp
oaz/logging/: monitor.hpp
oaz/mcts/: az_search.hpp  az_search_pool.hpp  az_search_pool_impl.cpp  backpropagation.hpp  mcts.hpp  mcts_search.hpp  search.cpp  search.hpp  search_impl.cpp  search_node.hpp  search_node_serialisation.hpp  selection.hpp
oaz/mutex/: mutex.hpp
oaz/neural_network/: model.hpp  nn_evaluator.cpp  nn_evaluator.hpp  nn_evaluator_impl.cpp  nn_saver.cpp  nn_saver.hpp  nn_saver_impl.cpp  nn_testing.hpp  nn_trainer.cpp  nn_trainer.hpp  nn_trainer_impl.cpp  training_batch.hpp
oaz/python/: array_utils.hpp  bomberland.cpp  cache.cpp  core.cpp  evaluator.cpp  game.cpp  game_derived.cpp  nn_evaluator.cpp  search.cpp  selection.cpp  simple_cache.cpp  simulation_evaluator.cpp  thread_pool.cpp
oaz/queue/: queue.hpp
oaz/random/: random_evaluator.hpp  random_evaluator_impl.cpp
oaz/semaphore/: semaphore.hpp
oaz/simulation/: simulation_evaluator.cpp  simulation_evaluator.hpp  simulation_evaluator_impl.cpp
oaz/thread_pool/: dummy_task.hpp  task.hpp  thread_pool.hpp
oaz/utils/: time.hpp  utils.hpp
patches/: tensorflow.patch
pyoaz/: bots.py  connect_four_utils.py  memory.py  models.py  self_play.py  tournament.py  utils.py
pyoaz/bots/: az_bot.py  bot.py  leftmost_bot.py  mcts_bot.py  nn_bot.py  random_bot.py
pyoaz/games/: game_factory.py
pyoaz/search/: __init__.py
pyoaz/selection/: __init__.py
pyoaz/self_play/: __init__.py  game_pool.py  self_play.py
pyoaz/thread_pool/: __init__.py
pyoaz/training/: __init__.py  trainer.py  utils.py
pyoaz_tests/: learning.py  learning_test.py  mcts_bot_test.py  mcts_search_test.py  nn_bot_test.py  random_bot_test.py  test_az_search.py  test_mcts_search.py  test_memory.py  test_self_play.py  test_tournament.py
pyoaz_tests/bots/: az_bot_test.py  leftmost_bot_test.py  mcts_bot_test.py  nn_bot_test.py
pyoaz_tests/games/: test_games.py
pyoaz_tests/self_play/: test_game_pool.py  test_self_play.py
pyoaz_tests/training/: test_config.toml  test_trainer.py  test_utils.py
scripts/: build_oaz.sh  dev.sh  install_pyoaz.sh
src/oaz/: bots.py  models.py  self_play.py  tournament.py
test/: .clang-tidy  connect_four_test.cpp  mcts_test.cpp  tensorflow_test.cpp
test/az/: az_search_pool_test.cpp  az_search_test.cpp  az_training_test.cpp  self_play_test.cpp
test/bandits/: bandits_test.cpp
test/bitboard/: bitboard_test.cpp
test/bomberland/: bomberland_test.cpp
test/cache/: simple_cache_test.cpp
test/connect_four/: connect_four_tensorflow_test.cpp  connect_four_test.cpp
test/hdf5/: hdf5_test.cpp
test/json/: json_test.cpp
test/mcts/: mcts_connect_four_test.cpp  mcts_search_test.cpp  mcts_selection_test.cpp  mcts_test.cpp
test/mutex/: mutex_test.cpp
test/neural_network/: generate_data.py  generate_evaluator_test_data.py  generate_neural_network_test_data.py  graph.pb  neural_network_test.cpp  nn_evaluator_test.cpp  nn_trainer_test.cpp
test/pyoaz/: az_search_test.py  mcts_search_test.py  test_az_search.py  test_bots.py  test_mcts_search.py  test_memory.py  test_self_play.py
test/pyoaz_tests/: test_az_search.py  test_memory.py  test_self_play.py
test/python/: model.pb  test.py  test_bots.py  test_tournament.py
test/queue/: queue_test.cpp
test/random/: random_evaluator_test.cpp
test/simulation/: simulation_evaluator_test.cpp
test/tensorflow/: tensorflow_eager_test.cpp  tensorflow_test.cpp
test/thread_pool/: thread_pool_test.cpp
test/tic_tac_toe/: tic_tac_toe_test.cpp
(+60 files in other folders)
